--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "scapie",
   "version": "0.0.2",
   "dependencies": {
+    "colors": "^1.1.2",
     "discord.js": "^11.0.0",
     "numeral": "^2.0.4",
     "promise": "^7.1.1",
