--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "discord.js": "^11.0.0",
     "numeral": "^2.0.4",
     "promise": "^7.1.1",
+    "random-weighted-choice": "^0.1.3",
     "request": "^2.79.0"
   }
 }
