changed engine versions

--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "request": "^2.81.0",
     "rs-api": "^2.2.5",
     "sqlite": "^2.8.0"
+  },
+  "engines": {
+    "node": "8.1.2",
+    "npm": "5.0.3"
   }
 }
