--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.3",
     "discord.js": "^11.1.0",
     "discord.js-commando": "git://github.com/gawdl3y/discord.js-commando.git#11.1",
+    "dom-to-image": "^2.5.2",
     "express": "^4.15.3",
     "express-jwt": "^5.3.0",
     "jwks-rsa": "^1.2.0",
@@ -23,7 +24,7 @@
     "moment": "^2.18.1",
     "random-weighted-choice": "^0.1.3",
     "request": "^2.81.0",
-    "rs-api": "^2.4.3",
+    "rs-api": "^2.4.4",
     "sqlite": "^2.8.0"
   },
   "engines": {
