--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.17.2",
     "colors": "^1.1.2",
     "concurrently": "^3.5.0",
+    "core-js": "^2.4.1",
     "cors": "^2.8.3",
     "discord.js": "^11.1.0",
     "discord.js-commando": "git://github.com/gawdl3y/discord.js-commando.git#11.1",
