--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jwks-rsa": "^1.2.0",
     "method-override": "^2.3.9",
     "moment": "^2.18.1",
+    "process-nextick-args": "^1.0.7",
     "random-weighted-choice": "^0.1.3",
     "request": "^2.81.0",
     "rs-api": "^2.4.4",
