updated discord.js and commando libraries

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-PROD_BOT_TOKEN=prod_token
-DEV_BOT_TOKEN=dev_token
+PROD_BOT_TOKEN=MjcxODgwNDU2OTAxNzU0ODgw.C2M4JA.nI0Ejhgp-D-1MdK0Ya3IbtPlUAU
+DEV_BOT_TOKEN=MjcxODgwNDU2OTAxNzU0ODgw.C2M4JA.nI0Ejhgp-D-1MdK0Ya3IbtPlUAU
 username=rslogin_for_api
 password=rspassword_for_api
