--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "core-js": "^2.4.1",
     "cors": "^2.8.3",
     "discord.js": "^11.2.0",
-    "discord.js-commando": "^0.10.0",
+    "discord.js-commando": "git://github.com/gawdl3y/discord.js-commando.git#821e0ada2165a7329477403355108f55408296e9",
     "dom-to-image": "^2.5.2",
     "express": "^4.15.3",
     "express-jwt": "^5.3.0",
